# dicom2bids

./: .gitignore  README.md  config.yaml  pyproject.toml
inputs/csv/: json_map.csv
src/dicom2bids/: __init__.py  check_sensitive_data.py  convert_and_organize.py  finalize_pipeline.py  finalize_upload.py  help.py  main.py  metadata_enrichment.py  nifti_calculations.py  pipeline.py  utils.py
src/dicom2bids/core/: cleanup.py  convert.py  metadata.py  organize.py  validation.py
src/dicom2bids/finalize/: pipeline.py  upload.py  validation.py
src/dicom2bids/processing/: metadata.py  nifti.py  sensitive.py
src/dicom2bids/utils/: __init__.py  config.py  help.py  logging.py  paths.py
