[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dicom2bids"
version = "0.1.0"
authors = [
  { name="Lee Mullins"},
]
description = "A tool to convert DICOM files to BIDS format and prepare for NIH upload"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydicom",
    "nibabel",
    "numpy",
    "pandas",
    "pathlib",
    "pyyaml",
]

[project.scripts]
dicom2bids = "dicom2bids.main:main"
metadata-enrichment = "dicom2bids.metadata_enrichment:main"
nifti-calculations = "dicom2bids.nifti_calculations:main"
check-sensitive-data = "dicom2bids.check_sensitive_data:main"
finalize-upload = "dicom2bids.finalize_upload:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dicom2bids"]

[project.urls]
Homepage = "https://github.com/lemulli/dicom2bids"
Repository = "https://github.com/lemulli/dicom2bids.git"